# Kandinsky-2

./: pyproject.toml
client/: .gitignore  bot.py  engine.py
